--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ https://www.tooplate.com/view/2120-ben-resume
         <div class="row">
           <div class="mx-auto col-lg-5 col-md-5 col-10">
             <img
-              src="images/ben.jpg"
+              src="images/jc.jpg"
               class="img-fluid"
               alt="Ben Resume HTML Template"
             />
