--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ https://www.tooplate.com/view/2120-ben-resume
         <div class="row">
           <div class="mx-auto col-lg-5 col-md-5 col-10">
             <img
-              src="images/jc.jpg"
+              src="images/jc.png"
               class="img-fluid"
               alt="Ben Resume HTML Template"
             />
@@ -105,28 +105,18 @@ https://www.tooplate.com/view/2120-ben-resume
             <h3 class="mb-4">This is Ben's Resume</h3>
 
             <p>
-              Ben Resume HTML Template is brought to you by
-              <a rel="nofollow" href="https://www.tooplate.com" target="_parent"
-                >Tooplate website</a
-              >. You can feel free to edit and use this page for your small
-              site. You are allowed to use this HTML template for any kind of
-              purpose.
-            </p>
-
-            <p>
-              However, please do not re-distribute the downloadable template ZIP
-              file on any template collection website. This is strongly
-              prohibited. Please contact Tooplate for more information.
+              My name is JC Bongaitan, a seasoned web developer with 5 years of
+              experience specializing in WordPress and Laravel. Proficient in
+              HTML, CSS, and JavaScript, I am dedicated to crafting dynamic and
+              responsive web solutions that bring visions to reality.
             </p>
 
             <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
-              <li><strong>Full Name :</strong> Ben Wilson</li>
+              <li><strong>Full Name :</strong> John Carlos Bongaitan</li>
 
-              <li><strong>Date of Birth:</strong> 26 September 1999</li>
+              <li><strong>Date of Birth:</strong> 02 July 1998</li>
 
-              <li><strong>Website :</strong> company.co</li>
-
-              <li><strong>Email :</strong> hello@company.co</li>
+              <li><strong>Email :</strong> devjc25@gmail.com</li>
             </ul>
           </div>
 
