--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="Tooplate" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
     />
+    
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+
+    <link rel="icon" type="image/x-icon" href="/images/icons2.png">
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/tooplate-ben-resume-style.css" />
@@ -78,20 +79,16 @@ https://www.tooplate.com/view/2120-ben-resume
       <div class="container">
         <div class="row">
           <div class="mx-auto col-lg-5 col-md-5 col-10">
-            <img
-              src="images/jc.png"
-              class="img-fluid"
-              alt="Ben Resume HTML Template"
+            <img src="images/jc.png" class="img-fluid" alt="Ben Resume HTML Template"
             />
           </div>
 
-          <div
-            class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12"
-          >
+          <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
             <div class="hero-text">
-              <h1 class="hero-title">👋 JC, a Web Developer</h1>
 
+              <h1 class="hero-title">👋 JC, a Web Developer</h1>
               <a href="#" class="email-link"> hello@company.co </a>
+
             </div>
           </div>
         </div>
@@ -102,7 +99,7 @@ https://www.tooplate.com/view/2120-ben-resume
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-6 col-12">
-            <h3 class="mb-4">This is Ben's Resume</h3>
+            <h3 class="mb-4">This is JC Bongaitan Resume</h3>
 
             <p>
               My name is JC Bongaitan, a seasoned web developer with 5 years of
