--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://www.tooplate.com/view/2120-ben-resume
             <div class="hero-text">
 
               <h1 class="hero-title">👋 JC, a Web Developer</h1>
-              <a href="#" class="email-link"> hello@company.co </a>
+              <a href="#" class="email-link"> bongaitan.jc23@gmail.com </a>
 
             </div>
           </div>
@@ -127,27 +127,21 @@ https://www.tooplate.com/view/2120-ben-resume
         </div>
         <div class="row about-third">
           <div class="col-lg-4 col-md-4 col-12">
-            <h3>Integer volutpat</h3>
+            <h3>Back-End:</h3>
             <p>
-              Sed eu risus tincidunt, finibus dolor non, gravida ex. Donec
-              lacinia mi nec erat tempus, vel consectetur ante scelerisque. Ut
-              blandit, risus in venenatis ultricies, lacus tellus fermentum.
+              As a back-end developer, I specialize in crafting the invisible architecture that powers web applications. Proficient in languages such as PHP, I design and implement robust server-side solutions. My focus is on ensuring seamless data flow, optimizing performance, and fortifying the security of web applications, providing a reliable foundation for dynamic user experiences.
             </p>
           </div>
           <div class="col-lg-4 col-md-4 col-12">
-            <h3>Mauris semper</h3>
+            <h3>Front-End:</h3>
             <p>
-              Cras et nisl vestibulum, accumsan elit sed, pretium enim.
-              Vestibulum in condimentum magna. Maecenas quam magna, iaculis eu
-              turpis et, commodo pulvinar leo.
+              In the realm of front-end development, I am dedicated to creating visually stunning and intuitive user interfaces. Leveraging HTML, CSS, and JavaScript, I transform design concepts into responsive and engaging web experiences. With a keen eye for user experience, I ensure that websites adapt seamlessly across various devices, delivering a cohesive and enjoyable interaction for users.
             </p>
           </div>
           <div class="col-lg-4 col-md-4 col-12">
-            <h3>Integer id neque</h3>
+            <h3>Video Editing:</h3>
             <p>
-              Duis at mollis leo, venenatis congue ex. Cras urna dui, gravida
-              euismod lectus et, cursus tempor nulla. Praesent at turpis quis ex
-              tristique gravida quis eget eros.
+              As a video editing specialist, I bring a creative touch to multimedia content, seamlessly integrating it into digital platforms. Proficient in industry-standard editing software, I refine and enhance videos for diverse purposes, be it promotional content, tutorials, or optimized delivery for web environments. My expertise lies in weaving visual narratives that captivate audiences, adding an extra layer of engagement to digital experiences.
             </p>
           </div>
         </div>
@@ -489,11 +483,11 @@ https://www.tooplate.com/view/2120-ben-resume
           <div class="mx-auto col-lg-4 col-md-6 col-12">
             <h3 class="my-4 pt-4 pt-lg-0">Say hello</h3>
 
-            <p class="mb-1">010-020-0340</p>
+            <p class="mb-1">0915-049-6288</p>
 
             <p>
               <a href="#">
-                hello@company.co
+                bongaitan.jc23@gmail.com
                 <i class="fas fa-arrow-right custom-icon"></i>
               </a>
             </p>
