--- a/index.html
+++ b/index.html
@@ -145,7 +145,38 @@ https://www.tooplate.com/view/2120-ben-resume
             </p>
           </div>
         </div>
+        <h4 class="text-center">SKILLS</h4>
+        <div class="row">
+          <div class="col-md-12">
+            <h6>PHP</h6>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h6>javascript</h6>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h6>HTML</h6>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h6>CSS</h6>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h6>Laravel</h6>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h6>Worpress</h6>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          
+        </div>
       </div>
+
     </section>
 
     <!-- TESTIMONIAL -->
@@ -264,7 +295,7 @@ https://www.tooplate.com/view/2120-ben-resume
             <img class="img-fluid" src="images/gun-critic.jpg" alt="">
           </div>
           <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://forestry.com/" target="_blank" rel="nofollow">Gun Critic</a></h4>
+            <h4 class="mb-3"><a href="https://forestry.com/" target="_blank" rel="nofollow">Liz My Biz</a></h4>
             <img class="img-fluid" src="images/list-my-biz.jpg" alt="">
             
           </div>
@@ -298,14 +329,7 @@ https://www.tooplate.com/view/2120-ben-resume
               </div>
 
               <div class="form-group d-flex flex-column-reverse">
-                <input
-                  type="email"
-                  class="form-control"
-                  name="cf-email"
-                  id="cf-email"
-                  placeholder="Your Email"
-                />
-
+                <input type="email" class="form-control" name="cf-email" id="cf-email" placeholder="Your Email" />
                 <label for="cf-email" class="webform-label">Your Email</label>
               </div>
 
@@ -364,12 +388,9 @@ https://www.tooplate.com/view/2120-ben-resume
 
             <p>
               Design:
-              <a
-                href="https://www.tooplate.com"
-                title="free HTML templates"
-                target="_blank"
-                >Tooplate</a
-              >
+              <a href="https://www.tooplate.com" title="free HTML templates" target="_blank" >
+                Tooplate
+                </a>
             </p>
           </div>
         </div>
