--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ https://www.tooplate.com/view/2120-ben-resume
 
               <li><strong>Date of Birth:</strong> 02 July 1998</li>
 
-              <li><strong>Email :</strong> devjc25@gmail.com</li>
+              <li><strong>Email :</strong> bongaitan.jc23@gmail.com</li>
             </ul>
           </div>
 
