--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ https://www.tooplate.com/view/2120-ben-resume
     <!-- FAQ -->
     <section class="faq section-padding">
       <div class="container">
-        <h3 class="mb-5 text-center">Sample Works</h3>
+        <h3 class="mb-5 text-center">WHAT I DID?</h3>
         <div class="row">
           
           <div class="col-md-4">
