--- a/index.html
+++ b/index.html
@@ -199,12 +199,11 @@ https://www.tooplate.com/view/2120-ben-resume
 
                   <div class="testimonials-info">
                     <p>
-                      Sed ut perspiciatis unde omnis iste natus error sit
-                      voluptatem.
+                      I just wanted to take a moment to tell you how awesome it is collaborating with you on our web projects. Your skills as a web developer are truly top-notch, and working together is always a blast!
                     </p>
 
-                    <h6 class="mb-0">Ben</h6>
-                    <span>Art Director</span>
+                    <h6 class="mb-0">Eufer</h6>
+                    <span>liz my biz ceo</span>
                   </div>
                 </div>
               </div>
