--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ https://www.tooplate.com/view/2120-ben-resume
                     </p>
 
                     <h6 class="mb-0">Eufer</h6>
-                    <span>liz my biz ceo</span>
+                    <span>LizMyBiz ceo</span>
                   </div>
                 </div>
               </div>
@@ -220,12 +220,11 @@ https://www.tooplate.com/view/2120-ben-resume
 
                   <div class="testimonials-info">
                     <p>
-                      Sed ut perspiciatis unde omnis iste natus error sit
-                      voluptatem.
+                      Keep up the good work
                     </p>
 
-                    <h6 class="mb-0">Marie</h6>
-                    <span>Marketing Consultant</span>
+                    <h6 class="mb-0">Matt</h6>
+                    <span>GunCritic ceo</span>
                   </div>
                 </div>
               </div>
@@ -233,11 +232,7 @@ https://www.tooplate.com/view/2120-ben-resume
               <div class="item">
                 <div class="testimonials-thumb d-flex">
                   <div class="testimonials-image">
-                    <img
-                      src="images/testimonials/testimonial-image03.jpg"
-                      class="img-fluid"
-                      alt="testimonials image"
-                    />
+                    <img src="images/testimonials/testimonial-image03.jpg" class="img-fluid" alt="testimonials image" />
                   </div>
 
                   <div class="testimonials-info">
