--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ https://www.tooplate.com/view/2120-ben-resume
                 </div>
               </div>
 
-              <div class="item">
+              <!-- <div class="item">
                 <div class="testimonials-thumb d-flex">
                   <div class="testimonials-image">
                     <img src="images/testimonials/testimonial-image03.jpg" class="img-fluid" alt="testimonials image" />
@@ -245,9 +245,9 @@ https://www.tooplate.com/view/2120-ben-resume
                     <span>Product Manager</span>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="item">
+              <!-- <div class="item">
                 <div class="testimonials-thumb d-flex">
                   <div class="testimonials-image">
                     <img
@@ -267,7 +267,7 @@ https://www.tooplate.com/view/2120-ben-resume
                     <span>Web Developer</span>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
