--- a/index.html
+++ b/index.html
@@ -1,169 +1,325 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>JC BONGAITAN</title>
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="Tooplate" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<head>
+  <title>JC BONGAITAN</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-    <link rel="icon" type="image/x-icon" href="/images/icons2.png" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="author" content="Tooplate" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <!-- MAIN CSS -->
-    <link rel="stylesheet" href="css/tooplate-ben-resume-style.css" />
-    <!--
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/all.min.css" />
+  <link rel="stylesheet" href="css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+  <link rel="icon" type="image/x-icon" href="/images/icons2.png" />
+
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="css/tooplate-ben-resume-style.css" />
+  <!--
 Tooplate 2120 Ben Resume
 https://www.tooplate.com/view/2120-ben-resume
 -->
-  </head>
+</head>
 
-  <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
-    <!-- MENU BAR -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#"> JC Bongaitan </a>
+<body data-spy="scroll" data-target="#navbarNav" data-offset="50">
+  <!-- MENU BAR -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#"> JC Bongaitan </a>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a href="#intro" class="nav-link smoothScroll">Introduction</a>
-            </li>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a href="#intro" class="nav-link smoothScroll">Introduction</a>
+          </li>
 
-            <li class="nav-item">
-              <a href="#about" class="nav-link smoothScroll">About Me</a>
-            </li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link smoothScroll">About Me</a>
+          </li>
 
-            <li class="nav-item">
-              <a href="#testimonials" class="nav-link smoothScroll">Reviews</a>
-            </li>
+          <li class="nav-item">
+            <a href="#testimonials" class="nav-link smoothScroll">Reviews</a>
+          </li>
 
-            <li class="nav-item">
-              <a href="#contact" class="nav-link smoothScroll">Contact</a>
-            </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link smoothScroll">Contact</a>
+          </li>
+        </ul>
+
+        <div class="mt-lg-0 mt-3 mb-4 mb-lg-0">
+          <a href="jcBongaitanCv.pdf" class="custom-btn btn" download>Download CV</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- HERO -->
+  <section class="hero d-flex flex-column justify-content-center align-items-center" id="intro">
+    <div class="container">
+      <div class="row">
+        <div class="mx-auto col-lg-5 col-md-5 col-10">
+          <img src="images/jc.png" class="img-fluid" alt="Ben Resume HTML Template" />
+        </div>
+
+        <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
+          <div class="hero-text">
+            <h1 class="hero-title">👋 JC, a Web Developer</h1>
+            <a href="#" class="email-link"> bongaitan.jc23@gmail.com </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section class="about section-padding" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-12">
+          <h3 class="mb-4">This is JC Bongaitan Resume</h3>
+
+          <p>
+            My name is JC Bongaitan, a seasoned web developer with 8 years of
+            experience specializing in WordPress and Laravel. Proficient in
+            HTML, CSS, and JavaScript, I am dedicated to crafting dynamic and
+            responsive web solutions that bring visions to reality.
+          </p>
+
+          <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
+            <li><strong>Full Name :</strong> John Carlos Bongaitan</li>
+            <li><strong>Date of Birth:</strong> 02 July 1998</li>
+            <li><strong>Email :</strong> bongaitan.jc23@gmail.com</li>
           </ul>
+        </div>
 
-          <div class="mt-lg-0 mt-3 mb-4 mb-lg-0">
-            <a href="jcBongaitanCv.pdf" class="custom-btn btn" download>Download CV</a>
-          </div>
+        <div class="col-lg-5 mx-auto col-md-6 col-12">
+          <img src="images/true-agency.jpg" class="about-image img-fluid" alt="Ben's Resume HTML Template" />
         </div>
       </div>
-    </nav>
-
-    <!-- HERO -->
-    <section class="hero d-flex flex-column justify-content-center align-items-center" id="intro">
-      <div class="container">
-        <div class="row">
-          <div class="mx-auto col-lg-5 col-md-5 col-10">
-            <img src="images/jc.png" class="img-fluid" alt="Ben Resume HTML Template" />
+      <div class="row about-third">
+        <div class="col-lg-4 col-md-4 col-12">
+          <h3>Back-End:</h3>
+          <p>
+            As a back-end developer, I specialize in crafting the invisible architecture that powers web applications.
+            Proficient in languages such as PHP, I design and implement robust server-side solutions. My focus is on
+            ensuring seamless data flow, optimizing performance, and fortifying the security of web applications,
+            providing a reliable foundation for dynamic user experiences.
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-12">
+          <h3>Front-End:</h3>
+          <p>
+            In the realm of front-end development, I am dedicated to creating visually stunning and intuitive user
+            interfaces. Leveraging HTML, CSS, and JavaScript, I transform design concepts into responsive and engaging
+            web
+            experiences. With a keen eye for user experience, I ensure that websites adapt seamlessly across various
+            devices, delivering a cohesive and enjoyable interaction for users.
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-12">
+          <h3>Video Editing:</h3>
+          <p>
+            As a video editing specialist, I bring a creative touch to multimedia content, seamlessly integrating it
+            into
+            digital platforms. Proficient in industry-standard editing software, I refine and enhance videos for diverse
+            purposes, be it promotional content, tutorials, or optimized delivery for web environments. My expertise
+            lies
+            in weaving visual narratives that captivate audiences, adding an extra layer of engagement to digital
+            experiences.
+          </p>
+        </div>
+      </div>
+      <h4 class="text-center">SKILLS</h4>
+      <div class="row">
+        <div class="col-md-12">
+          <h6>PHP</h6>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="0" aria-valuemin="0"
+              aria-valuemax="100"></div>
           </div>
+          <h6>javascript</h6>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0"
+              aria-valuemax="100"></div>
+          </div>
+          <h6>HTML</h6>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0"
+              aria-valuemax="100"></div>
+          </div>
+          <h6>CSS</h6>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0"
+              aria-valuemax="100"></div>
+          </div>
+          <h6>Laravel</h6>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0"
+              aria-valuemax="100"></div>
+          </div>
+          <h6>Worpress</h6>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0"
+              aria-valuemax="100"></div>
+          </div>
+        </div>
 
-          <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
-            <div class="hero-text">
-              <h1 class="hero-title">👋 JC, a Web Developer</h1>
-              <a href="#" class="email-link"> bongaitan.jc23@gmail.com </a>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- TESTIMONIAL -->
+  <section class="testimonials section-padding" id="testimonials">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h3 class="mb-5 text-center">What People say</h3>
+
+          <div class="owl-carousel owl-theme" id="testimonials-carousel">
+            <div class="item">
+              <div class="testimonials-thumb d-flex">
+                <div class="testimonials-image">
+                  <img src="images/testimonials/testimonial-image01.jpg" class="img-fluid" alt="testimonials image" />
+                </div>
+
+                <div class="testimonials-info">
+                  <p>
+                    I just wanted to take a moment to tell you how awesome it is collaborating with you on our web
+                    projects. Your skills as a web developer are truly top-notch, and working together is always a
+                    blast!
+                  </p>
+
+                  <h6 class="mb-0">Eufer</h6>
+                  <span>LizMyBiz ceo</span>
+                </div>
+              </div>
             </div>
+
+            <div class="item">
+              <div class="testimonials-thumb d-flex">
+                <div class="testimonials-image">
+                  <img src="images/testimonials/testimonial-image02.jpg" class="img-fluid" alt="testimonials image" />
+                </div>
+
+                <div class="testimonials-info">
+                  <p>
+                    Keep up the good work
+                  </p>
+
+                  <h6 class="mb-0">Matt</h6>
+                  <span>GunCritic ceo</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- <div class="item">
+                <div class="testimonials-thumb d-flex">
+                  <div class="testimonials-image">
+                    <img src="images/testimonials/testimonial-image03.jpg" class="img-fluid" alt="testimonials image" />
+                  </div>
+
+                  <div class="testimonials-info">
+                    <p>
+                      Sed ut perspiciatis unde omnis iste natus error sit
+                      voluptatem.
+                    </p>
+
+                    <h6 class="mb-0">Jen</h6>
+                    <span>Product Manager</span>
+                  </div>
+                </div>
+              </div> -->
+
+            <!-- <div class="item">
+                <div class="testimonials-thumb d-flex">
+                  <div class="testimonials-image">
+                    <img
+                      src="images/testimonials/testimonial-image04.jpg"
+                      class="img-fluid"
+                      alt="testimonials image"
+                    />
+                  </div>
+
+                  <div class="testimonials-info">
+                    <p>
+                      Sed ut perspiciatis unde omnis iste natus error sit
+                      voluptatem.
+                    </p>
+
+                    <h6 class="mb-0">Wilson</h6>
+                    <span>Web Developer</span>
+                  </div>
+                </div>
+              </div> -->
           </div>
         </div>
       </div>
-    </section>
+  </section>
 
-    <!-- ABOUT -->
-    <section class="about section-padding" id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-12">
-            <h3 class="mb-4">This is JC Bongaitan Resume</h3>
-
-            <p>
-              My name is JC Bongaitan, a seasoned web developer with 8 years of
-              experience specializing in WordPress and Laravel. Proficient in
-              HTML, CSS, and JavaScript, I am dedicated to crafting dynamic and
-              responsive web solutions that bring visions to reality.
-            </p>
-
-            <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
-              <li><strong>Full Name :</strong> John Carlos Bongaitan</li>
-              <li><strong>Date of Birth:</strong> 02 July 1998</li>
-              <li><strong>Email :</strong> bongaitan.jc23@gmail.com</li>
-            </ul>
-          </div>
-
-          <div class="col-lg-5 mx-auto col-md-6 col-12">
-            <img src="images/true-agency.jpg" class="about-image img-fluid" alt="Ben's Resume HTML Template" />
-          </div>
+  <!-- SAMPLES -->
+  <section class="faq section-padding">
+    <div class="container">
+      <h3 class="mb-5 text-center">WHAT I DID?</h3>
+      <div class="row">
+        <div class="col-md-4">
+          <h4 class="mb-3"><a href="https://forestry.com/" target="_blank" rel="nofollow">Forestry</a></h4>
+          <img class="img-fluid" src="images/forestry.jpg" alt="Forestry site" />
+        </div>
+        <div class="col-md-4">
+          <h4 class="mb-3"><a href="https://guncritic.com/" target="_blank" rel="nofollow">Gun Critic</a></h4>
+          <img class="img-fluid" src="images/gun-critic.jpg" alt="Gun Critic site" />
+        </div>
+        <div class="col-md-4">
+          <h4 class="mb-3"><a href="https://hockeyreviews.com/" target="_blank" rel="nofollow">Hockey Reviews</a></h4>
+          <img class="img-fluid" src="images/hockey-reviews.jpg" alt="Hockey Reviews site" />
         </div>
       </div>
-    </section>
-
-    <!-- SAMPLES -->
-    <section class="faq section-padding">
-      <div class="container">
-        <h3 class="mb-5 text-center">WHAT I DID?</h3>
-        <div class="row">
-          <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://forestry.com/" target="_blank" rel="nofollow">Forestry</a></h4>
-            <img class="img-fluid" src="images/forestry.jpg" alt="Forestry site" />
-          </div>
-          <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://guncritic.com/" target="_blank" rel="nofollow">Gun Critic</a></h4>
-            <img class="img-fluid" src="images/gun-critic.jpg" alt="Gun Critic site" />
-          </div>
-          <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://hockeyreviews.com/" target="_blank" rel="nofollow">Hockey Reviews</a></h4>
-            <img class="img-fluid" src="images/hockey-reviews.jpg" alt="Hockey Reviews site" />
-          </div>
+      <div class="row mt-4">
+        <div class="col-md-4">
+          <h4 class="mb-3"><a href="https://knifecritic.com/" target="_blank" rel="nofollow">Knife Critic</a></h4>
+          <img class="img-fluid" src="images/knife-critic.jpg" alt="Knife Critic site" />
         </div>
-        <div class="row mt-4">
-          <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://knifecritic.com/" target="_blank" rel="nofollow">Knife Critic</a></h4>
-            <img class="img-fluid" src="images/knife-critic.jpg" alt="Knife Critic site" />
-          </div>
-          <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://xpertchimneysweep.com/" target="_blank" rel="nofollow">Xpert Chimney Sweep</a></h4>
-            <img class="img-fluid" src="images/xpert-chimney.jpg" alt="Xpert Chimney Sweep site" />
-          </div>
-          <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://thesweepersman.com/" target="_blank" rel="nofollow">The Sweepers Man</a></h4>
-            <img class="img-fluid" src="images/the-sweepers-man.jpg" alt="The Sweepers Man site" />
-          </div>
+        <div class="col-md-4">
+          <h4 class="mb-3"><a href="https://xpertchimneysweep.com/" target="_blank" rel="nofollow">Xpert Chimney
+              Sweep</a></h4>
+          <img class="img-fluid" src="images/xpert-chimney.jpg" alt="Xpert Chimney Sweep site" />
         </div>
-        <div class="row mt-4">
-          <div class="col-md-4">
-            <h4 class="mb-3"><a href="https://careyouranimals.com/" target="_blank" rel="nofollow">Care Your Animals</a></h4>
-            <img class="img-fluid" src="images/care-your-animals.jpg" alt="Care Your Animals site" />
-          </div>
+        <div class="col-md-4">
+          <h4 class="mb-3"><a href="https://thesweepersman.com/" target="_blank" rel="nofollow">The Sweepers Man</a>
+          </h4>
+          <img class="img-fluid" src="images/the-sweepers-man.jpg" alt="The Sweepers Man site" />
         </div>
       </div>
-    </section>
+      <div class="row mt-4">
+        <div class="col-md-4">
+          <h4 class="mb-3"><a href="https://careyouranimals.com/" target="_blank" rel="nofollow">Care Your Animals</a>
+          </h4>
+          <img class="img-fluid" src="images/care-your-animals.jpg" alt="Care Your Animals site" />
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <section class="contact section-padding pt-0" id="contact">
-      <!-- Contact Section (unchanged) -->
-    </section>
+  <section class="contact section-padding pt-0" id="contact">
+    <!-- Contact Section (unchanged) -->
+  </section>
 
-    <!-- SCRIPTS -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/custom.js"></script>
-  </body>
+  <!-- SCRIPTS -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/smoothscroll.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/custom.js"></script>
+</body>
+
 </html>
