--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>block 7 lot 14 opringville baranggay Calumpang, general santos, 9500</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -826,7 +826,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+63 915 049 6288</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -834,7 +834,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <p>bongaitan.jc23@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
