--- a/index.html
+++ b/index.html
@@ -692,21 +692,21 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
 
-          <div class="col-lg-5">
+          <div class="col-lg-12">
 
             <div class="info-wrap">
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>block 7 lot 14 opringville baranggay Calumpang, general santos, 9500</p>
+                  <p>block 7 lot 14 Opringville Baranggay Calumpang, General Santos City, 9500</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -731,7 +731,7 @@
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <!-- <div class="col-lg-7">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
@@ -765,7 +765,8 @@
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div> -->
+          <!-- End Contact Form -->
 
         </div>
 
